@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Honore the 'NO_PICK' flag for generated BOOKS even if empty.
+Nicolas Weeger 2009-12-05
+
 test/unit/common/check_time.c: Remove apparent debugging output which doesn't
 	really belong.
 MSW 2009-12-01
